maps, order completion etc

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <!-- Internet permissions -->
+<uses-permission android:name="android.permission.INTERNET" />
+   <!-- Permissions options for the `location` group -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <application
         android:label="dayliff"
         android:name="${applicationName}"
@@ -29,5 +36,11 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+             <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="AIzaSyB7q2nEYvaIqByaAzEc1N3AlvP5tX7SuOs"/>
+            <meta-data
+    android:name="com.google.android.gms.version"
+    android:value="@integer/google_play_services_version" />
     </application>
 </manifest>
