--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.1.3
   freezed: ^2.4.5
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  google_maps_flutter: ^2.5.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
+  dio_http_formatter: ^3.2.1
+  shared_preferences: ^2.2.2
+  url_launcher: ^6.2.1
+  intl: ^0.18.1
+  android_intent_plus: ^4.0.3
+  flutter_polyline_points: ^2.0.0
+  geolocator: ^10.1.0
+  flutter_dotenv: ^5.1.0
+  flutter_spinkit: ^5.2.0
+  image_picker: ^1.0.4
+  cached_network_image: ^3.3.0
+  flutter_easyloading: ^3.0.5
+  lottie: ^2.7.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +67,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -61,8 +82,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - .env
+    - assets/
+    - assets/illustrations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
