--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,10 @@ dependencies:
   flutter_spinkit: ^5.2.0
   image_picker: ^1.0.4
   cached_network_image: ^3.3.0
-  flutter_easyloading: ^3.0.5
   lottie: ^2.7.0
   pin_code_fields: ^8.0.1
   shimmer: ^3.0.0
+  date_picker_timeline: ^1.2.5
 
 dev_dependencies:
   flutter_test:
