--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             android:value="2" />
             <!-- Maps key -->
     <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyABYEnjWN_vUjfU4GF9r1F33r3RfpLKDKU"/>
+               android:value="#"/>
 
             <meta-data
     android:name="com.google.android.gms.version"
