--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -37,8 +37,9 @@
             android:name="flutterEmbedding"
             android:value="2" />
             <!-- Maps key -->
-    <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="#"/>
+    <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="${MAPS_API_KEY}" />
 
             <meta-data
     android:name="com.google.android.gms.version"
