--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   shimmer: ^3.0.0
   date_picker_timeline: ^1.2.5
+  syncfusion_flutter_signaturepad: ^24.2.3
 
 dev_dependencies:
   flutter_test:
