--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   shimmer: ^3.0.0
   date_picker_timeline: ^1.2.5
   syncfusion_flutter_signaturepad: ^24.2.3
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +77,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo.png"
+  image_path: "assets/logo.jpg"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
