--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
             <!-- Maps key -->
     <meta-data
     android:name="com.google.android.geo.API_KEY"
-    android:value="${MAPS_API_KEY}" />
+    android:value="AIzaSyB7q2nEYvaIqByaAzEc1N3AlvP5tX7SuOs" />
 
             <meta-data
     android:name="com.google.android.gms.version"
