--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   intl: ^0.18.1
   android_intent_plus: ^4.0.3
   flutter_polyline_points: ^2.0.0
-  geolocator: ^10.1.0
+  location: ^5.0.3
   flutter_dotenv: ^5.1.0
   flutter_spinkit: ^5.2.0
   image_picker: ^1.0.4
@@ -96,6 +96,8 @@ flutter:
     - .env
     - assets/
     - assets/illustrations/
+    - assets/markers/
+    - assets/carousel/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
