--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   date_picker_timeline: ^1.2.5
   syncfusion_flutter_signaturepad: ^24.2.3
   flutter_svg: ^2.0.9
+  video_player: ^2.8.2
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +78,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/logo.jpg"
+  image_path: "assets/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 # For information on the generic Dart part of this file, see the
@@ -98,6 +99,7 @@ flutter:
     - assets/illustrations/
     - assets/markers/
     - assets/carousel/
+    - assets/videos/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
