Login screen complete

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   syncfusion_flutter_signaturepad: ^24.2.3
   flutter_svg: ^2.0.9
   video_player: ^2.8.2
+  font_awesome_flutter: ^10.7.0
+  glassmorphism: ^3.0.0
 
 dev_dependencies:
   flutter_test:
