--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,15 +53,16 @@ dependencies:
   flutter_spinkit: ^5.2.0
   image_picker: ^1.0.4
   cached_network_image: ^3.3.0
-  lottie: ^2.7.0
   pin_code_fields: ^8.0.1
   shimmer: ^3.0.0
   date_picker_timeline: ^1.2.5
   syncfusion_flutter_signaturepad: ^24.2.3
   flutter_svg: ^2.0.9
-  video_player: ^2.8.2
   font_awesome_flutter: ^10.7.0
   glassmorphism: ^3.0.0
+  video_player: ^2.8.2
+  easy_stepper: ^0.8.3
+  
 
 dev_dependencies:
   flutter_test:
@@ -72,7 +73,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
   flutter_launcher_icons: ^0.13.1
