--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   glassmorphism: ^3.0.0
   video_player: ^2.8.2
-  easy_stepper: ^0.8.3
+  lottie: ^3.0.0
   
 
 dev_dependencies:
