--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   video_player: ^2.8.2
   lottie: ^3.0.0
   path_provider: ^2.1.2
+  overlay_support: ^2.1.0
   
 
 dev_dependencies:
