--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   lottie: ^3.0.0
   path_provider: ^2.1.2
   overlay_support: ^2.1.0
+  flutter_local_notifications: ^16.3.2
+  firebase_messaging: ^14.7.15
+  firebase_core: ^2.25.4
   
 
 dev_dependencies:
