--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_local_notifications: ^16.3.2
   firebase_messaging: ^14.7.15
   firebase_core: ^2.25.4
+  flutter_native_splash:
   
 
 dev_dependencies:
@@ -109,7 +110,6 @@ flutter:
     - assets/carousel/
     - assets/videos/
     - assets/icons/
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
