--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -37,7 +37,8 @@
 
             <meta-data
     android:name="com.google.android.gms.version"
-    android:value="@integer/google_play_services_version" />
+    android:value="@integer/google_play_services_version"
+    android:enableOnBackInvokedCallback="true" />
     </application>
     <!-- Internet permissions -->
     <uses-permission android:name="android.permission.INTERNET"/>
